--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body{
     color: white;
 }
 
+
+.down-txt {
+    display: inline;
+    border: 1px solid white;
+    width: 70px;
+    background-color: #242120;
+    color: white;
+}
+
 #input-text{
     border: 1px solid rgb(156, 153, 153);
     height: 350px;
