--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-
 body{
-    background-color: #242120;
+    color: black;
+    background-color: white;
     -webkit-print-color-adjust: exact;
+    font-family: 'Raleway', sans-serif;
 }
 
 #theme {
@@ -10,6 +11,7 @@ body{
     width: 70px;
     background-color: #242120;
     color: white;
+    border-radius: 7px;
 }
 
 
@@ -18,11 +20,21 @@ body{
     border: 1px solid white;
     width: 70px;
     background-color: #242120;
+    border-radius: 7px;
     color: white;
 }
 
+@keyframes widthScreen{
+    
+    from{
+        width: 300px;
+    }
+}
+
 #input-text{
-    border: 1px solid rgb(156, 153, 153);
+    border: solid 0.1px rgba(128, 128, 128, 0.37);
+    border-radius: 30px;
+    padding: 30px;
     height: 350px;
     width: 50%;
     display: block;
@@ -30,11 +42,14 @@ body{
     margin-right: auto;
     background-color: #000000;
     color: #2ADD1D;
+    animation-name: widthScreen;
+    animation-duration: 2s;
 }
 
 
 #input-text:focus{
     outline: 0;
+    color: black;
 }
 
 .titleText{
@@ -44,12 +59,39 @@ body{
 
 .texts{
     text-align: center;
-    color: rgb(202, 196, 196);
-    font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
 
 #select-font{
     border: 1px solid rgb(156, 153, 153);
     width: 100px;
     height: 24px;
+}
+
+@media only screen and (max-width:600px){
+    
+    #input-text{
+        height: 200px;
+        width: 300px;
+    }
+
+    *{
+        margin-top: 7px;
+    }
+}
+
+@media only screen and (max-width:400px){
+    
+    #input-text{
+        height: 230px;
+        width: 250px;
+    }
+
+    *{
+        margin-top: 7px;
+    }
+
+    #spanDownload, .down-txt, #sizeFont, #sizeFont{
+        display: none;
+    }
 }
